<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardElevation="2dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardBackgroundColor="?attr/colorPrimaryVariant"
    card_view:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="?android:textColorPrimary"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
            card_view:layout_constraintTop_toTopOf="@+id/img_item_photo"
            tools:text="@string/animals_name" />

        <TextView
            android:id="@+id/tv_item_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:textColor="?android:textColorSecondary"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            tools:text="@string/category" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:textColor="?android:textColorSecondary"
            card_view:layout_constraintBottom_toBottomOf="@+id/img_item_photo"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_item_name"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_category"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/description" />

        <TextView
            android:id="@+id/tv_item_food"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:textSize="16sp"
            android:visibility="gone"
            android:textColor="?android:textColorSecondary"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_description"
            tools:text="@string/food" />

        <TextView
            android:id="@+id/tv_item_heavy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:textColor="?android:textColorSecondary"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_food"
            tools:text="@string/heavy" />

        <TextView
            android:id="@+id/tv_item_area_distribution"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:textColor="?android:textColorSecondary"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_heavy"
            tools:text="@string/area_distribution" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>